# GMAIL_BOT

./: .env.example  .gitignore  CORE_BUILD.md  LICENSE  LOGGING_GUIDE.md  README.md  gmail_client.py  preferences.example.txt  preferences.txt  prefilter_rules_example.py  requirements.txt
docs/: implementation.md
gmail-mcp/: README.md  gmail.py  main.py  pyproject.toml
triage/: gmail_auth.py  llm.py  mcp_actions.py  prefilter.py  run_log.py
